test/integration/bad/examples-bad/new/type-size-bad48.stan
model { matrix[0, T~normal(0,1)] x;}